k8sDocs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yoddhas-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - yoddhas.duckdns.org
      secretName: yoddhas-tls
  rules:
    - host: yoddhas.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yoddhas-service
                port:
                  number: 80
